fix some naming errors

--- a/freshdark.less
+++ b/freshdark.less
@@ -1,4 +1,4 @@
-/* onedork base colors */
+/* fresh dark base colors */
 @yellow: #DDD7A3;
 @orange: #fea47f;
 @red: #ea8080;
@@ -19,7 +19,7 @@
 @theme-flavor: #000000;
 @theme-flavor-inverse: #ffffff;
 
-/* onedork notebook colors */
+/* fresh dark notebook colors */
 @notebook-bg: #1d1d1d;
 @notebook-fg: #d4d4d4;
 @notebook-base: #242424;
@@ -132,7 +132,7 @@
 @box-shadow: #3e4458;
 @md-header-link: rgba(0, 0, 0, .32);
 
-/* onedork ansi colors */
+/* fresh dark ansi colors */
 @ansiblack: #2b303b;
 @ansiblue: @blue;
 @ansigray: #899ab8;
@@ -145,7 +145,7 @@
 @stderr-fg: #D0D4E6;
 @js-error: @stderr-bg;
 
-/* onedork codemirror colors */
+/* fresh dark codemirror colors */
 @cm-selected: #373D4B;
 @cm-gutters: #353a48;
 @cm-linenumber: @input-prompt;
