darken the theme and fix some styling

--- a/freshdark.less
+++ b/freshdark.less
@@ -20,13 +20,13 @@
 @theme-flavor-inverse: #ffffff;
 
 /* fresh dark notebook colors */
-@notebook-bg: #1d1d1d;
+@notebook-bg: #222222;
 @notebook-fg: #d4d4d4;
-@notebook-base: #242424;
+@notebook-base: #111111;
 
 /* jtplot figure style */
-@axisFace: #373e4b;
-@figureFace: #373e4b;
+@axisFace: #000000;
+@figureFace: #000000;
 @textColor: #d4d4d4;
 @edgeColor: #eee;
 @gridColor: #e4e4e4;
@@ -44,17 +44,17 @@
 @unemphasize-fg: #687b96;
 
 /* code, text, markdown, & tooltip colors */
-@cc-input-bg: #242424;
+@cc-input-bg: #111111;
 @cc-input-fg: #d4d4d4;
-@cc-output-bg-default: #373e4b;
+@cc-output-bg-default: #000000;
 @cc-output-fg: #d4d4d4;
 @text-cell-fg: #d4d4d4;
-@unrendered-text: #ffcb6b;
-@header-fg: #ffcb6b;
+@unrendered-text: #d4d4d4;
+@header-fg: #d4d4d4;
 @tooltip-bg-color: #323A44;
 @tooltip-fg-color: @cc-input-fg;
 @nb-name-fg: @header-fg;
-@nb-name-hover: #ffcb6b;
+@nb-name-hover: #d4d4d4;
 
 /* cell border colors */
 @cc-border-selected: @selected-bg;
@@ -70,7 +70,7 @@
 @prompt-hover-color: #576a8d;
 @prompt-line: rgba(53, 114, 198, .75);
 @tc-prompt-std: #a4a4a4;
-@matching-bracket: #4C8BE2;
+@matching-bracket: #333333;
 @menubar-bg: #242931;
 @menubar-fg: @notebook-fg;
 @menubar-hover: @dropdown-bg;
@@ -92,7 +92,7 @@
 @cmd-palette-hover: #2b3850;
 
 /* buttons, widgets, kernels colors */
-@item-theme: #ffcb6b;
+@item-theme: #d4d4d4;
 @item-blue: #4C8BE2;
 @item-cyan: #2c85f7;
 @item-green: #94c273;
@@ -116,7 +116,7 @@
 @codeblock-border: @codeblock-bg;
 
 /* btn, scrollbar and shadow colors */
-@button-bg: #242424;
+@button-bg: #111111;
 @button-border: @button-bg;
 @button-color: @notebook-fg;
 @button-hover: @item-theme;
