--- a/freshdark.less
+++ b/freshdark.less
@@ -16,17 +16,17 @@
 @code-blue: @blue;
 @code-orange: @orange;
 @code-cyan: @cyan;
-@theme-flavor: #000000;
+@theme-flavor: #222222;
 @theme-flavor-inverse: #ffffff;
 
 /* fresh dark notebook colors */
-@notebook-bg: #222222;
+@notebook-bg: #010101;
 @notebook-fg: #d4d4d4;
 @notebook-base: #111111;
 
 /* jtplot figure style */
-@axisFace: #000000;
-@figureFace: #000000;
+@axisFace: #222222;
+@figureFace: #222222;
 @textColor: #d4d4d4;
 @edgeColor: #eee;
 @gridColor: #e4e4e4;
@@ -46,7 +46,7 @@
 /* code, text, markdown, & tooltip colors */
 @cc-input-bg: #111111;
 @cc-input-fg: #d4d4d4;
-@cc-output-bg-default: #000000;
+@cc-output-bg-default: #222222;
 @cc-output-fg: #d4d4d4;
 @text-cell-fg: #d4d4d4;
 @unrendered-text: #d4d4d4;
@@ -126,9 +126,9 @@
 @button-focus-fg: #8adc4b;
 @button-panel-bg: @panel-header-bg;
 @button-panel-hover: #2A313C;
-@scrollbar: #3f4555;
-@scroll-trough: #292d3a;
-@scrollbar-inactive: #464e60;
+@scrollbar: #525252;
+@scroll-trough: #2e2e2e;
+@scrollbar-inactive: #5e5e5e;
 @box-shadow: #3e4458;
 @md-header-link: rgba(0, 0, 0, .32);
 
